'Drawing Blanks: The Poor and the Growth and Collapse of the Lotteries'

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -2,7 +2,78 @@
 ## Annual Conference ##
 *06 January - 08 January 2016*
 
-## Keynote ##
+## Plenary ##
+
+'Drawing Blanks: The Poor and the Growth and Collapse of the Lotteries'
+James Raven (Cambridge)
+
+**Part of a book project with @OUPAcademic Lottery Lives**
+
+Begins with an anecdote of an attack on two (female) witnesses against men accused of violating gambling laws, leaving constables gravely injured.
+
++ Tensions over social normality of gambling and gambling debts amongst aristocracy and such laws
+  + Charles James Fox had lost over 100k before age 25, left debt of 10k at death
+  
++ Real moral panic in wake of French Revolution or "The Josephine Argument": Banning private gambling and directing it to state lottery, which Joseph iI controlled?
+  + "What can comparative state attitudes to gambling (prohibition vs permissiveness) tell us about fiscal/social views?" HT @SMCoulombeau 
+  + Insurance at Lloyd's became like 'gambling at Whites'
+
+### British Lotteries Overview ###
+
+**Lotteries**
+
++ Original raffles, largely financial failures
++ After 1690s became more financially secure
++ Over 18th century, state lotteries developed in various European countries
++ Local and private lotteries, raffles continued, especially in Low Countries
++ English and Irish lotteries seen as akin to government bonds--guaranteed return (via annuity) but spreading over decades led to poor returns
+
+**19th Century**
+
++ Contractors who ran lottery became more desperate as purchases thinned
++ Some prizes were bundles of future tickets
+
+**State Finance**
+
++ More people 'contributed' via lottery than other funds (1762)
++ Funded major war efforts in 18th century
++ Funded Westminster Bridge
++ Helped established (what became) British Museum
+ 
+**European Lotteries**
+
++ Discussion of French and Spanish state lotteries
++ Although not as prominent as in Britain / France, Spanish lotter after 1763 still very important and under recognised part of Enlightenment reforms
++ Irish lotteries to fund church refurbishments and hospitals
+
+**Collapse of Lotteries**
+A slight modification from previous writings…
+
++ Moral Crusade against lottery secondary to questions over its efficiency for raising state funds
++ Wilberforce (apocryphal?): What should we abolish next?
+
+**But**
+
+“We shouldn’t underestimate moral concern about the poor”
+
++ Discussion against lottery a continuation of 18th century concerns over gambling in Britain
++ Banning of French Lottery and Regulations in Tuscany but there are essential differences between systems
+  + Motivation for the suppression of private lotteries differed
+  + On the continent, mostly an effort to stop *foreign* lotteries, rather than domestic private ones
+  + Britain also had concerns about foreign lotteries, there were few sustained efforts or campaigns against them
+
+** British Case**
+
++ Growth of 'shares' brought lottery into the discretionary spending of about 1/4 of population (Britain)
++ Development of secondary gambling (and legislative crackdown thereof from 1739 Gaming Act)
++ Social gap evident considering the rampant betting amongst gentry and aristocracy as time of attack (opening anecdote)
++ 1790s discussion of the 'little go' private lottery draws--and how they were fixed according to the *Times*
+
+**Conclusion**
+
++ Discusses social background of attackers (including boxers)
+  + Indication of professional underworld (gang warfare between gambling providers and informants)
++ Greater prosecutions of working-class gambling but some compassions for “Poor deluded” who had been “plundered”
 
 ____
 #### Nota Bene
