Rachael Morton, Changing Perceptions of Quality in the English Metalware Trade, c.1674-1774

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -4,8 +4,7 @@
 
 ## Plenary ##
 
-'Drawing Blanks: The Poor and the Growth and Collapse of the Lotteries'
-James Raven (Cambridge)
+'Drawing Blanks: The Poor and the Growth and Collapse of the Lotteries' by James Raven (Cambridge)
 
 **Part of a book project with @OUPAcademic Lottery Lives**
 
@@ -74,6 +73,42 @@ A slight modification from previous writings…
 + Discusses social background of attackers (including boxers)
   + Indication of professional underworld (gang warfare between gambling providers and informants)
 + Greater prosecutions of working-class gambling but some compassions for “Poor deluded” who had been “plundered”
+
+## Cultures of Trade and Commerce ##  
+Chair: N. G. Howe, Ho Tim Seminar Room
+
+### Rachael Morton, Changing Perceptions of Quality in the English Metalware Trade, c.1674-1774 ###
+
++ Speaks of the growth of the metalware trade, particularly of consumer goods such as toys
++ Movement from "Bromich ware", low-quality items at the start of the century, to "Birmingham Ware", quality at the end of the century
++ Papers to explore expansion of trade in Birmingham and Sheffield and the tensions between 'quality' providers in London  
+ + **Argues that quality was not just its tangible qualities, but all the reputations attached to it**
+  + Regulation as well as the consensus of the population in determining quality
+  + Because of innovation, lower price could still be higher quality
+
+*Development of Hallmarks*
+
++ Because silver could be melted down into bullion / specie, authenticating purity very important
++ Hallmark; Location of assay office, year, composition, producer 
++ Originally in London, Chester, Exeter, Newcastle and York but this meant costs / chance of intellectual piracy for Sheffield and Birmingham producers
++ Birmingham out of regulatory framework and so hard greater freedom
+  + London opposed opening of Birmingham office out of fears of competition
++ Inclusion of imitative marks (that weren’t actually regulated)
+  + Forgeries about ‘London’ or later ‘Birmingham’ made indicate shifts in idea of quality reputation
++ Registration of Marks but the guilds (on item, in register and touch plates)
+  + Black list circulated to producers and sometimes newspapers
+
+*Reporting Poor Quality*
+
++ Compensation to consumers who sued for poor metalware
++ Books on how to spot poor quality
++ Trade cards displayed marks, they were understood by general public
+
+
+### Gönül Bakay, The Levant Company: The Expansion and Contraction of British-Ottoman Commercial Relations in the Long Eighteenth Century ###
+
+
+### Peter Collinge, The Silken Phoenix, Sarah Davenport (1779-c.1865), Enterprise and the Derby Silk Industry ###
 
 ____
 #### Nota Bene
