#BSECS #3: Gönül Bakay, The Levant Company: The Expansion and Contraction of British-Ottoman Commercial Relations

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -107,6 +107,28 @@ Chair: N. G. Howe, Ho Tim Seminar Room
 
 ### Gönül Bakay, The Levant Company: The Expansion and Contraction of British-Ottoman Commercial Relations in the Long Eighteenth Century ###
 
++ Opens with the early years of Anglo-Ottoman trade relations in 16th century, defying French objections
++ Initial monopoly to Governor and Company of the Merchants of the Levant 
+  + By 1595 many of the agents traded on their own account 
+  + Initially agents were single men who worked for 3 years then returned home and traded from then on in their own right
++ Merchant company also helped build up and maintain political relations
+
+**Quotes a fantastically long address to the Sultana**
+
++ Families discouraged from going with factors, as they were not supported by company; none seem to have lived in poverty
++ In 17th century, company given trading rights without time limitation—reached height in 1670s
+
+**Reasons of the Demise of the Company (1780s—1820s)**
+
++ Contemporaries accused them of greed and monopolistic tendencies
+  + End of private shipping to general shipping in company by-laws in 1780
++ Rise of French Trade: greater number of ships, better market research
++ Relations with Persia: Division by Russia and Ottoman affecting silk trade
+
+
+
+
+
 
 ### Peter Collinge, The Silken Phoenix, Sarah Davenport (1779-c.1865), Enterprise and the Derby Silk Industry ###
 
