#BSECS #3: Peter Collinge, The Silken Phoenix, Sarah Davenport (1779-c.1865), Enterprise and the Derby Silk Industry

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -125,13 +125,40 @@ Chair: N. G. Howe, Ho Tim Seminar Room
 + Rise of French Trade: greater number of ships, better market research
 + Relations with Persia: Division by Russia and Ottoman affecting silk trade
 
-
-
-
-
-
 ### Peter Collinge, The Silken Phoenix, Sarah Davenport (1779-c.1865), Enterprise and the Derby Silk Industry ###
 
+Sets the stage: Davenport pregnant and widowed with no specific instruction to take over husband’s business; in 1817 a fire destroyed silk factory. Insurance only covered part of the machinery 
+
++ Cannot regain Davenport through traditional corporate history means – no business records, journal, or correspondence.  
++ Fragmentary evidence in vital records, newspaper, will (single line)
++ Nonetheless evidence of expanding company in line with wider industry
+
+*Silk Throwster* could be anything from 1 (self employed) to 700+ employees…
+ + Davenport had 10 despite troubles (may have misheard)
++ Average 135
+
+**Losses of fire**
++ She didn’t own factory, only leased
++ Derby Mercury noted *substantial* loss but unclear precise
+
+**Estimating Value / Work **
++ Comparative insurance claims indicate Davenport needed considerable capital investment to run her business
++ Comparison of house nearby gives an indication of the setup of the silk throwster building
++ Davenport owned several premises; one offered to sale in Mercury—listed machinery helps us understand how the business was run
++ Building still exists in 1970 -- Davenport had top three levels (probably only silk thread produced)
++ Similar mill in Chesterfield (almost identical) -- 3000lbs of silk produced a year
++ Using machinery for Full Street / Green Lane…likely 98 workers—this is proportional to known quantities of workers at Sheffield Mill
+
+**A substantial business which collapsed in 1830s**
++ Reason unclear, but may have been undercapitalised
++ Similar to many other male throwsters
++ Bank account evidence found: prolonged economic distress may have been the reason (huge drop 1818-1819 and then again significant drop 1826-1831.
+  + High balance and drop may have been insurance and repurchase of goods
+
+Conclusion: Georgian business were not MORE vunerable because they were run by women.  No evidence she went bankrupt.  
++ Might have just been reassessing which business she wanted to be involved in considering economic climate.
++ Reappears in 1861 as a shareholder in railways
++ Her silence compared to her husband: Many, many notices for dissolution of partnerships 1802-1815
 ____
 #### Nota Bene
 
