#BSECS #17 Leah Orr, Prices of English Books at Auction ca. 1680

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -159,7 +159,22 @@ Conclusion: Georgian business were not MORE vunerable because they were run by w
 + Might have just been reassessing which business she wanted to be involved in considering economic climate.
 + Reappears in 1861 as a shareholder in railways
 + Her silence compared to her husband: Many, many notices for dissolution of partnerships 1802-1815
+## The Value of Books and the Values of Creativity 
+*Chair: Marcia Bessa Marques Louey Seminar Room*
+
+### Leah Orr, Prices of English Books at Auction ca. 1680 ###
++ Large availability of second hand books at far lower prices than new one of the same title
++ Records indicate a large number of discounted books of relatively new books, even ‘cheaper’ texts
++ Only 8% sold at auction at higher than listed price, 6% at price and the rest at less, sometimes far less
++ Discussion of the selling of unbound books (which may have been personalised for previous owners)
++ 22 of the 32 that sold at higher prices were very cheap to begin with (with relatively small increases)
++ There was an average 44% discount, opening up the market to a wider range of readers
++ Quality and ‘fanciness’ does not always translate into expected price difference in the ‘same’ text.  Condition isn’t, however, noted.
++ Price is consumer driven rather than ‘intrinsic’ and good be more or less than ‘retail’ price at different auctions. 
+  + Availability, Demand, Binding  Nothing to do with text or author
++ Relatively new books in second-hand auctions as well as possibly in ‘stores’ making it a wide range of prices for a contemporary literature market
 ____
+
 #### Nota Bene
 
 ***This work is licensed under a Creative Commons Attribution 3.0 Unported License.***
