#BSECS # 17 Ann van Allen-Russell, Imaginative Territory: J. C. Bach, C. F. Abel and the Rise of Intellectual Property

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -159,6 +159,7 @@ Conclusion: Georgian business were not MORE vunerable because they were run by w
 + Might have just been reassessing which business she wanted to be involved in considering economic climate.
 + Reappears in 1861 as a shareholder in railways
 + Her silence compared to her husband: Many, many notices for dissolution of partnerships 1802-1815
+
 ## The Value of Books and the Values of Creativity 
 *Chair: Marcia Bessa Marques Louey Seminar Room*
 
@@ -173,6 +174,35 @@ Conclusion: Georgian business were not MORE vunerable because they were run by w
 + Price is consumer driven rather than ‘intrinsic’ and good be more or less than ‘retail’ price at different auctions. 
   + Availability, Demand, Binding  Nothing to do with text or author
 + Relatively new books in second-hand auctions as well as possibly in ‘stores’ making it a wide range of prices for a contemporary literature market
+
+### Ann van Allen-Russell, Imaginative Territory: J. C. Bach, C. F. Abel and the Rise of Intellectual Property ###
+
++ Discussion of (3) lawsuits by Back and Abel against music publishers James Longman and Charles Lukey
+  1. Were they trying to transform English law to include music labour
+  2. Did they consider their music their ‘property’ 
+
+*Relevant Timeline:*
+
+•	1710 – SoA: 14 years with 14 year extension
+•	1735/7 – Failed Attempts to extend laws
+•	1743 – Argued for common law protect of texts (Battle of the Booksellers -> 1774)
+•	Miller v. Taylor (1768/9) – ruled in favour of common law property rights for author
+•	Donaldson v Becket (1774) – ruled SoA negated common law protections
+
++ Although both sides agreed manual and intellectual labour were different, they disagreed whether mental labour should be protected
++ Discussions of occupation vs possession
+  + Harmed if author prevented from procuring financial benefit from their own work
+  + Diverting profits as harmful as any other trespass
+
+** Bach and Abel Suits **
++ Unauthorised publications arrangements and distributions of several compositions violated royal privileges (just barely!) of 14 years exclusivity 
++ Filed between Miller v Taylor and Donaldson v Beckett so could claim common law as well as privilege 
+  + Normal practice to obtain cease and desist + profits made
++ Move from Chancery Court into petition (with booksellers) to Parliament 
+  + House of Commons did not include music petition as part of law (Booksellers Relief Bill) going forward
+  + Returned to Chancery Court
+  + Ruled in favour of JCV and refered to King's Bench, led to inclusion of music in Statue of Anne
+
 ____
 
 #### Nota Bene
