#BSECS #49: Rebecca Lyons: Opening Remarks on the Academic Book

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -201,9 +201,36 @@ Conclusion: Georgian business were not MORE vunerable because they were run by w
 + Move from Chancery Court into petition (with booksellers) to Parliament 
   + House of Commons did not include music petition as part of law (Booksellers Relief Bill) going forward
   + Returned to Chancery Court
-  + Ruled in favour of JCV and refered to King's Bench, led to inclusion of music in Statue of Anne
+  + Ruled in favour of JCV and referred to King's Bench, led to inclusion of music in Statue of Anne
 
-____
+## Round Table: What’s the Point of the Academic Book? ##
+Chair: Matthew Grenby, MGA Lecture Room  
+Speakers: Tim Hitchcock, Mari Shullaw and Rebecca Lyons
+
+### Rebecca Lyons: Opening Remarks ###
+Researcher for Academic Book of the Future Project 
++ What do we mean by ‘academic book’? In an open discussion among British lIbrary staff, there was no real consensus
++ They are continuing evolving—there must be a point if this is the case
++ Beyond ‘free resources’ such as Wikipedia, there is the value added of academic publishers – a stamp of quality on the content (and making them quite pretty)
++ But you can have that in a journal article? Why a Book?
+  + A structure that makes them ‘eminently useable’ 
+  + Memory of the geography of each individual book (mnemonic function)
+  + Personal choice of marginalia (and looking back at scribblings from undergraduate days)
++ The long form argument is an important part of Literature and History discipline
++ An important availability of choice as to the format that works best for the author’s need
++ Too expensive?
+  + Yes (if no one buys them, are we talking to no one)
+  + No, as research distribution has prompted new innovations and challenges (digital books, print on demand)
++ Lots of new possibilities are opening up, so it’s not the end!
+
+### Tim Hitchcock: Opening Remarks ###
+
+
+### Mari Shullaw: Opening Remarks ###
+
+
+
+____	
 
 #### Nota Bene
 
