#BSECS #49 Mari Shullaw: Opening Remarks

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -223,10 +223,34 @@ Researcher for Academic Book of the Future Project
   + No, as research distribution has prompted new innovations and challenges (digital books, print on demand)
 + Lots of new possibilities are opening up, so it’s not the end!
 
+### Mari Shullaw: Opening Remarks ###
+Boyer and Boydell (Independent Academic Publisher of books, not journals, not science)
++ Academic Books as a space for academics to meet
++ 85% of publishing is still hard-copy
++ Haven’t yet (been asked to) published Open Access
++ Many Challenges
+  + Increased costs
+  + Reduced Runs
+  + Library Budgets diminished (around the world)
++ Lowering price doesn’t necessarily increase sales as much as they had hoped
+
+**Formats**
++ The Browser of the book values the whole book, the pleasure of the journey, the meanders and digressions 
+  + At the moment, this is more difficult in electronic formats because of missing marginalia and two-handed reading (flipping back and forth) 
+  + There isn’t enough time in the day to do this all the time, sometimes searching for the piece we need is the right course
++ Attempts to make a digital object (referring to Tim) haven’t been easy, however great the potential
++ There is no reason print and digital won’t happily co-exist for some time to come
+
++ The writing of the book is part of the academic digestion system
++ Do we think of the Academic Book as where the research ends? 
++ OA Journals and Digital Formats allow for flexibility on point-of-project and length
+
++ A good editor will help shape the work before going out to review and mediating the reviews when they come back in, as well as a degree of detachment from your own institutional politics
++ Publishers rely on authors – if you really, really want to go in a certain direction, we will
+
 ### Tim Hitchcock: Opening Remarks ###
 
 
-### Mari Shullaw: Opening Remarks ###
 
 
 
