#BSECS #49 Tim Hitchcock: Opening Remarks

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -249,10 +249,18 @@ Boyer and Boydell (Independent Academic Publisher of books, not journals, not sc
 + Publishers rely on authors – if you really, really want to go in a certain direction, we will
 
 ### Tim Hitchcock: Opening Remarks ###
++ Speaks of the old system (publishing merry-go-round) that was clearly elitist, gendered, racist, but had some pleasures worth mentioning (which he does eloquently)
++ Academic books are outdated “a bit rubbish”
+  + Not taking advantage of the opportunities we take advantage of in our research
+  + As long as they are an easy tick box for ‘authority’, they will continue to exist
+  + Wikipedia might have 4 errors per page, but how many do books have? How rigorous and long term is fact checking of these?
 
++ Our research is fundamentally shaped by what is available digital (we all do it), and out publishers use automated copyediting and publishing processes and so we cannot really say we ‘still work in the old forms’ 
+  + We can imitate the slow process but it is not really required as it one was
 
+**A suggestion: Instead of mooning over books, and worrying about whether the publishing system will exist in the future, we should be honest about the modern processes we actually use**
 
-
+Speaks wonderfully about experience of building of *London Lives* (can’t do it justice here.  Buy him a pint and ask him to tell it again)
 
 ____	
 
