#BSECS Haydn Mason Lecture: ‘Going to Theatre: Scripts, Practices, Experiences’  by Alexei Evstratov

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -262,6 +262,30 @@ Boyer and Boydell (Independent Academic Publisher of books, not journals, not sc
 
 Speaks wonderfully about experience of building of *London Lives* (can’t do it justice here.  Buy him a pint and ask him to tell it again)
 
+## Haydn Mason Lecture: ‘Going to Theatre: Scripts, Practices, Experiences’ #BSECS ##
+*Dr Alexei Evstratov*
+
+*Provides a detailed account of his personal experience of viewing a play on the French Revolution, interrupted by and interwoven with the terrorist attacks in Paris in November 2015*
+
++ In the study of the 18th Century French Theatre, the last two decades have been exceptional in their expansion 
+  + The audience gains increasing agency
++ If there is a consensus across disciplines and national histories, it is that there is an expansion of the public’s exposure to objects and environments broadly defined as ‘cultural’
+  + The public broke the private monopoly as authorities of cultural information
++ Discussion of Foucault’s *Discipline & Punish* as applied to theatre policing and the social geography of the auditorium 
++ Does public agency grow as it expands or is it reduced to the role of consumer?
+
+**What is a theatrical event**
++ “A impersonates B while C looks on” (Bentley 1996)
++ The simultaneous activities of the performer and the spectator, united in time
++ Modified to not be restricted by a unity of time / space
+
++ Is ‘being an audience’ merely the act of attention, regardless of the cognitive nature or quality? 18th century would not agree.
+
++ Admittance to Opera House in St Petersburg was free and *could* be heterogeneous.  Sometimes only be invitation (elite) but sometimes you just had to be free (non-serf) and non-offensively (to Catherine) dressed
+  + Practical Restrictions: Announcement, placement by rank
+
+Concludes with a firm statement of commitment to comparative history; having looked at French and Russian theatre and would love to corroborate findings with research into English and German (among other) historiographies
+
 ____	
 
 #### Nota Bene
