#BSECS #76 @gregg_sh's Bring your laptop! Or, working with digital texts from the Text Creation Partnership

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -286,6 +286,35 @@ Speaks wonderfully about experience of building of *London Lives* (can’t do it
 
 Concludes with a firm statement of commitment to comparative history; having looked at French and Russian theatre and would love to corroborate findings with research into English and German (among other) historiographies
 
+## Workshop: Bring your laptop! Or, working with digital texts from the Text Creation Partnership ##
+Stephen Gregg (@gregg_sh), Maplethorpe Hall
+*Workshop will discuss problems with 18C Collections Online and how to work with it*
+This is not a digital humanities ‘coding session’; it’s about what we can do with off the shelf resources
+**ECCO**
++ An Institutional-Access Resource
++ Like Google Books, you get a facsimile of a particular copy of a book; but you are searching not the image but the OCR behind it
+  + OCR of a digital image, of a microfilm, of a real book (much degradation)
+  + Good for looking at individual texts, but less so for a group of texts, particularly of own choosing
+**Text Creation Partnership**
++ EEBO-TCP ‘way ahead’ of the 18th C (which has stalled)
+  + Structured and coded close to 50000 texts pre-1700
++ 18thConnect (www.18thconnect.org)
+  + Aggregates both critical and primary material
+  + Typewright for updating and correcting OCR transcriptions
+  + Produce your own edition by correcting ECCO (you receive them back once you’ve done them)
+
+**Textual Analysis**
++ TCP NGRAM Viewer
++ Voyant-Tools.org for word clouds, words-in-context, etc
++ Discussion of these analyses: earlyprint.wustl.edu/ 
+
+**Grabbing Texts**
++ Oxford Text Archive (Or Gutenberg) to download individual texts (http://ota.ox.ac.uk/catalogue/index.html)
++ Correcting ECCO through Typewright (18th Connect)
+
+**Editing**
++ Creating Digital Editions with Students (shows example made on blogspot by student)
++ Creating an exhibit through 18th Connect (http://www.18thconnect.org/communities)
 ____	
 
 #### Nota Bene
