Readerly Relations: Managing Expectations in Literary and Journalistic Reading Cultures  #BSECS #94

--- a/CN_20160106_BSECS.md
+++ b/CN_20160106_BSECS.md
@@ -315,6 +315,59 @@ This is not a digital humanities ‘coding session’; it’s about what we can 
 **Editing**
 + Creating Digital Editions with Students (shows example made on blogspot by student)
 + Creating an exhibit through 18th Connect (http://www.18thconnect.org/communities)
+
+## Readerly Relations: Managing Expectations in Literary and Journalistic Reading Cultures 
+### The First Ten Years of ‘E Pluribus Unum’: The Many SelfAppointed Roles of the Gentleman’s Magazine 
+*Thomas Vranken*
+Provides and Overview of the publishing history of Cave’s “Gentleman’s Magazine”
+  + Many, many competitors 
+Thesis: How the *Gentlemans’ Magazine distinguished it in a very crowded field
++ For 6p a greater variety of content than any book; hence ‘magazine’ or treasure house
++ Able to circumvent additional fees / taxes associated with newspapers
+**Roles**
++ Key role in developing British Identity in wake of English Civil War and Jacobite Rebellion 
++ Curator
+  + Listing of the London and ‘other provincial and colonial’ journals from which it is derived its content on its imprimatur
+
+**E Pluribus Unum**
++ Franklin had been a regular reader / contributor to Gentleman’s Magazine/Journal and it must have been from here that the US motto was derived
++ Reworked from a line of Virgil
++ Magazine = By republishing in one place, many disparate articles into a greater whole
+  + This is the meaning in both the Magazine and the US
++ Journal = Everyone could find an article that interested them
+
+### Early Anglo-American Children’s Books in Transnational Perspective 
+*Philipp Reisner*
++ 18thC children’s books tell us more about culture than modern equivalent
+
+**How the protestant tutor developed into the New England primer**
+Protestant Tutor used names from Old Testament while the Primer words from New Testament for teaching spelling and definitions (pietism)
+“Train up a Child in the way he should go: and when he is old he will not depart from it”
+Primer seems more ‘playful’, with more abstract text rather than embedded text
+  + This would be more challenging for learner depending on how it was used
+  + Information on early modern pedagogy patchy and unreliable
+Traditionally children introduced to Christian thought through Old Testament stories 
+  + Baptist books are differentiated by les s attention to Noah, etc 
+  + Primer’s author presumably an Anabaptist
+
+
+
+
+**The Transformation of the New Robison Crusoe**
+(1779/1780) -- A free adaptation as best, but called a translation 
+  + First published in English 1781/1782 *Robison the Younger*
+  + Later *The New Robinson Crusoe*
+  + Over 1500 Editions in Global Languages
+
+Changes:
++ Oral and Improvised Storytelling
++ Increase Moralisation
++ Role of Pater Familias (Husband, Wife, Children)
+  + An allegory of a childlike situation to help children with real life estrangement with parents
+
+Helps us understand pedagogy and childrearing and the birth of childhood
+
+A movement from a wrathful to a vengeful god
 ____	
 
 #### Nota Bene
